--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,29 @@
-x-stub {
-  display: block; 
+x-meme {
+  display: block;
+}
+
+x-meme div {
+    display: inline-block;
+    position: relative;
+}
+
+x-meme img {
+    position: relative;
+    top: 0;
+}
+
+x-meme p {
+    color: white;
+    position: absolute;
+    text-align: center;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-transform: uppercase;
+    width: 100%;
+}
+
+x-meme p:nth-child(2) {
+    top: 0;
+}
+x-meme p:nth-child(3) {
+    bottom: 0;
 }
