--- a/src/main.css
+++ b/src/main.css
@@ -14,9 +14,12 @@ x-meme img {
 
 x-meme p {
     color: white;
+    font-family: Impact, Arial, sans-serif;
+    font-size: 36pt;
+    margin: .3em auto;
     position: absolute;
     text-align: center;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
     text-transform: uppercase;
     width: 100%;
 }
