--- a/src/main.css
+++ b/src/main.css
@@ -1,13 +1,16 @@
-x-meme {
+x-meme,
+x-doge {
   display: block;
 }
 
-x-meme > div {
+x-meme > div,
+x-doge > div {
     display: inline-block;
     position: relative;
 }
 
-x-meme img {
+x-meme img,
+x-doge img {
     position: relative;
     top: 0;
 }
@@ -30,4 +33,38 @@ x-meme header {
 }
 x-meme footer {
     bottom: 0;
+}
+
+x-doge .phrase {
+    font-family: 'Comic Sans', 'Comic Sans MS', Impact, Arial, sans-serif;
+    font-size: 24pt;
+    position: absolute;
+    text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+    text-transform: lowercase;
+}
+
+x-doge .phrase:nth-of-type(1) {
+    color: #7FFF00;
+    top: 3%;
+    left: 3%;
+}
+x-doge .phrase:nth-of-type(2) {
+    color: #FB6C6C;
+    top: 20%;
+    right: 15%;
+}
+x-doge .phrase:nth-of-type(3) {
+    color: #00FFFF;
+    bottom: 10%;
+    left: 10%;
+}
+x-doge .phrase:nth-of-type(4) {
+    color: #FF00FF;
+    bottom: 20%;
+    right: 12%;
+}
+x-doge .phrase:nth-of-type(5) {
+    color: #00FA9A;
+    bottom: 30%;
+    left: 8%;
 }
