--- a/src/main.css
+++ b/src/main.css
@@ -6,11 +6,15 @@ x-doge {
 x-meme > div,
 x-doge > div {
     display: inline-block;
+    max-width: 100%;
+    max-height: 100%;
     position: relative;
 }
 
 x-meme img,
 x-doge img {
+    max-width: 100%;
+    max-height: 100%;
     position: relative;
     top: 0;
 }
